welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: not found: value ||
    if ((nums(b)==6)&&(nums(b+1)==6))||((nums(b)==6)&&(nums(b+1)==7)){
                                     ^