welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var a:Int=0
  for (b<-0 to nums.length-2){
    if ((nums(b)==6)&&(nums(b+1)==6))||((nums(b)==6)&&(nums(b+1)==7)){
      a=a+1
    }
  }
  if (nums(nums.length-1)==6){
    if ((nums(0)==6)||(nums(0)==7)){
      a=a+1
    }
  }
  return a
}
